--- a/website/stories/orv/read/ch_335.html
+++ b/website/stories/orv/read/ch_335.html
@@ -202,7 +202,7 @@
 <p class="orv_line">I noticed the branch in Yoo Joonghyuk's hand.</p>
 <div class="orv_system"><p>[The constellation 'Spokesman of Justice and Wisdom' is astonished!]</p></div>
 <p class="orv_line">Perhaps the branch was a stolen star relic from Athena. Strictly speaking, it was a sacred star relic.</p>
-<div class="orv_constellation"><p>[Athena's Olive Branch. The reason why Poseidon was so scary was that despite living for many years, he had very few 'losing stories'. Poseidon had lost once and it was in the bet he made with Athena.]</p></div>
+<p class="orv_line">[Athena's Olive Branch]. The reason why Poseidon was so scary was that despite living for many years, he had very few 'losing stories'. Poseidon had lost once and it was in the bet he made with Athena.</p>
 <p class="orv_line">I had some memories from Yoo Sangah.</p>
 <p class="orv_line">–A long time ago, Poseidon and Athena competed in a city. People decided that the god who gave the better gift would be the guardian of the city. At the time, Poseidon struck a rock with a trident, causing the sea to rise. Meanwhile, Athena grew an olive tree filled with rich fruit.</p>
 <p class="orv_line">–Sea water is very common… did Athena win?</p>
@@ -263,7 +263,8 @@
 <div class="orv_constellation"><p>[Spear that Draws the Boundaries of the Sea!]</p></div>
 <p class="orv_line">It was too late. The moment the waves hit, Poseidon's spear was already stuck into Persephone's heart. Then looking closer, the spear didn't hit Persephone but a giant hand. A hand made of dense darkness gripped Poseidon's spear.</p>
 <p class="orv_line">It was a feast of probability so bright that I would probably never see it again in my life. I understood why the bureau had passed the 'probability plausibility screening'.</p>
-<p class="orv_line">Dionysus laughed while shivering. [Haha, if things go wrong today, the 12 Gods will die.]</p>
+<p class="orv_line">Dionysus laughed while shivering.</p>
+<div class="orv_constellation"><p>[Haha, if things go wrong today, the 12 Gods will die.]</p></div>
 <p class="orv_line">A story of darkness was released into the air. The darkness that had kept silent for a long time was awakening.</p>
 <div class="orv_system"><p>[Giant Story 'Underworld' is coming to the sea.]</p></div>
 <p class="orv_line">One of the three chief gods of Olympus, Father of the Rich Night. Underworld King Hades had descended to Gigantomachia.</p>
