--- a/website/stories/orv/read/ch_342.html
+++ b/website/stories/orv/read/ch_342.html
@@ -231,7 +231,7 @@
 <p class="orv_line">Once the operation started, the first thing Aileen said was, "You must come with me."</p>
 <p class="orv_line">"…Is there anything I can do to help?"</p>
 <p class="orv_line">"Yes."</p>
-<p class="orv_line">The moment I ended the room, I saw the fragments of my broken mother. My mother, who defeated the returnees by summoning Pungbaek, was in a state where all her stories were broken.</p>
+<p class="orv_line">The moment I entered the room, I saw the fragments of my broken mother. My mother, who defeated the returnees by summoning Pungbaek, was in a state where all her stories were broken.</p>
 <div class="orv_quote"><p>「 …Dokja. 」</p></div>
 <p class="orv_line">Somewhere, I felt I heard these words. Maybe it was my mother's stories. I thought in a reassuring manner to her. 'Don't worry. I didn't choose anyone'.</p>
 <p class="orv_line">My mother's soul must be restored as quickly as possible. That way, I had the time to save Yoo Sangah. From now on, it was the time of Aileen.</p>
