--- a/website/stories/orv/read/ch_344.html
+++ b/website/stories/orv/read/ch_344.html
@@ -209,7 +209,7 @@
 <p class="orv_line">I stared at the wall for a moment. "Then I will break it."</p>
 <div class="orv_quote"><p>「 What? 」</p></div>
 <p class="orv_line">"I will break some parts of the wall and force you to eat her."</p>
-<p class="orv_line">Originally, the Fourth Wall wasn't reality. However, now I was able to hit the wall. I clenched my fists and dealt a blow to the wall in front of me The whole room shook from the devastating impact. There was a short scream and the sound of people rushing outside.</p>
+<p class="orv_line">Originally, the Fourth Wall wasn't reality. However, now I was able to hit the wall. I clenched my fists and dealt a blow to the wall in front of me. The whole room shook from the devastating impact. There was a short scream and the sound of people rushing outside.</p>
 <p class="orv_line">I swung my fist again. The wall still had no scratches.</p>
 <div class="orv_quote"><p>「 It is use less. 」</p></div>
 <p class="orv_line">"…"</p>
