--- a/website/stories/orv/read/ch_346.html
+++ b/website/stories/orv/read/ch_346.html
@@ -200,7 +200,8 @@
 <p class="orv_line">Sparks once again appeared in Yoo Joonghyuk's vicinity. In fact, Asmodeus' words sounded like this to Yoo Joonghyuk.</p>
 <div class="orv_constellation"><p>[Have you heard of Three ■■ to ■■■■ in a Ruined ■■■?]</p></div>
 <p class="orv_line">Yoo Joonghyuk got a headache as he asked, "…What did you say?"</p>
-<p class="orv_line">Asmodeus sighed. [Hmmm, you aren't yet allowed…]</p>
+<p class="orv_line">Asmodeus sighed.</p>
+<div class="orv_constellation"><p>[Hmmm, you aren't yet allowed…]</p></div>
 <p class="orv_line">"What are you talking about?"</p>
 <div class="orv_constellation"><p>[Well, it isn't a big deal. Then… based on the situation, the Demon King of Salvation is still asleep.]</p></div>
 <p class="orv_line">Asmodeus grinned and glanced at the Factory.</p>
