--- a/website/stories/orv/read/ch_347.html
+++ b/website/stories/orv/read/ch_347.html
@@ -299,7 +299,8 @@
 <div class="orv_system"><p>[Your current body configuration is different from that of the character.]</p></div>
 <div class="orv_system"><p>[Your status has overcome the penalty of the physical conditions.]</p></div>
 <p class="orv_line">Andromalius' fist stopped in front of my nose. He stared at me with astonishment before his eyes shifted to his stomach. Half of his body was gone.</p>
-<p class="orv_line">I pulled my sword out of his body and declared. [First, the 72nd place.]</p>
+<p class="orv_line">I pulled my sword out of his body and declared.</p>
+<div class="orv_constellation"><p>[First, the 72nd place.]</p></div>
 <br>
 <hr>
         </article>
