--- a/website/stories/orv/read/ch_349.html
+++ b/website/stories/orv/read/ch_349.html
@@ -251,7 +251,8 @@
 <div class="orv_constellation"><p>[I didn't always attend. This is a bit unusual.]</p></div>
 <p class="orv_line">Asmodeus gazed at the exterior of the magnificent banquet hall and smiled. In fact, the banquet was unusual in not just size but also position. The moment we were summoned, there was a crowd of people walking across the bridge.</p>
 <p class="orv_line">The constellations and incarnations passing through the bridge and the dokkaebis waiting to broadcast the scene. In addition, there were the constellations belonging to the independent media of the Star Stream.</p>
-<p class="orv_line">Asmodeus said, [Then I will enter first. Don't be uncomfortable and take it easy. Above all, you are the most likely candidate to win a prize this season.]</p>
+<p class="orv_line">Asmodeus said,</p>
+<div class="orv_constellation"><p>[Then I will enter first. Don't be uncomfortable and take it easy. Above all, you are the most likely candidate to win a prize this season.]</p></div>
 <p class="orv_line">…Candidate to win a prize?</p>
 <p class="orv_line">Before I could say anything, Asmodeus flicked his fingers and his clothing became a gorgeous black dress. He started to enter the hall by crossing the bridge with an elegant walk.</p>
 <div class="orv_constellation"><p>[Devil of Lust and Wrath!]</p></div>
