--- a/website/stories/orv/read/ch_351.html
+++ b/website/stories/orv/read/ch_351.html
@@ -254,7 +254,9 @@
 <p class="orv_line">Asmodeus kept speaking.</p>
 <div class="orv_constellation"><p>[The Demon King of Salvation had extra lives and knew he was the strongest sacrifice. If he wanted, he could've ended the scenario before there were big sacrifices.]</p></div>
 <p class="orv_line">The murmuring of the constellations intensified. The story continued.</p>
-<div class="orv_constellation"><p>[Sparing those he wants to live and ignoring those he doesn't want to live, the Demon King of Salvation is such an existence. He is a demon king who practices the discrimination that you dislike. Discrimination is the most serious sin in the Star Stream. As if to declare victory, Asmodeus asked a final question. Then I'll ask Eden. Do you still think the Demon King of Salvation is a 'good' demon king?]</p></div>
+<div class="orv_constellation"><p>[Sparing those he wants to live and ignoring those he doesn't want to live, the Demon King of Salvation is such an existence. He is a demon king who practices the discrimination that you dislike. Discrimination is the most serious sin in the Star Stream.]</p></div>
+<p class="orv_line">As if to declare victory, Asmodeus asked a final question.</p>
+<div class="orv_constellation"><p>[Then I'll ask Eden. Do you still think the Demon King of Salvation is a 'good' demon king?]</p></div>
 <p class="orv_line">The crowd fell silent. Some of the angels were watching me with suspicious eyes while many demon kings were smiling.</p>
 <p class="orv_line">At this time, there was a constellation who rose.</p>
 <div class="orv_constellation"><p>[■■, everyone has such a contradiction.]</p></div>
