--- a/website/stories/orv/read/ch_355.html
+++ b/website/stories/orv/read/ch_355.html
@@ -301,8 +301,7 @@
 <p class="orv_line">Those were Aileen's words. She exchanged the story pack and left, leaving only Yoo Joonghyuk and I in the room.</p>
 <p class="orv_line">The floating dust settled on his nose. I opened my mouth while watching Yoo Joonghyuk. "You grabbed me first and dropped me down the bridge."</p>
 <p class="orv_line">I knew he couldn't hear me but I still wanted to talk.</p>
-<div class="orv_quote"><p>「 "Get your hand off me and get lost, you damn jerk." 」</p></div>
-<p class="orv_line">"I believe you. You are definitely a prophet." 」</p>
+<div class="orv_quote"><p>「 "Get your hand off me and get lost, you damn jerk."<br>"I believe you. You are definitely a prophet." 」</p></div>
 <p class="orv_line">The first time I encountered him on the bridge. Suddenly, a laugh emerged.</p>
 <p class="orv_line">"Honestly, you aren't in a position to blame me for anything. You are a regressor… how many people died because of you?"</p>
 <p class="orv_line">Once I started speaking, the memories poured out like a waterfall. It was like Pandora's Box. It felt as if a lot of time had passed. I had spent a lot of time with this person.</p>
