--- a/website/stories/orv/read/ch_357.html
+++ b/website/stories/orv/read/ch_357.html
@@ -218,7 +218,7 @@
 <p class="orv_line">I nodded to Kyrgios in the distance and sent a signal into the air. Soon, there was a low-grade dokkaebi responsible for the scenario transfer.</p>
 <div class="orv_constellation"><p>[Kim Dokja's Company. Are the preparations finished?]</p></div>
 <p class="orv_line">"Start transferring us."</p>
-<p class="orv_line">The low-grade dokkaebis recited something and we were sucked into the portal that appeared at our feet. It was a pretty advanced portal which meant I didn't feel dizzy when the space changed. How much time passed?</p>
+<p class="orv_line">The low-grade dokkaebi recited something and we were sucked into the portal that appeared at our feet. It was a pretty advanced portal which meant I didn't feel dizzy when the space changed. How much time passed?</p>
 <div class="orv_system"><p>[You have entered the waiting room for the 80th scenario.]</p></div>
 <p class="orv_line">Rather than the peaceful scenery of Gwanghwamun, a pale marble waiting room appeared. The waiting room was seething with constellations and incarnations who had arrived in advance.</p>
 <div class="orv_constellation"><p>[When will the scenario start?]</p></div>
