--- a/website/stories/orv/read/ch_361.html
+++ b/website/stories/orv/read/ch_361.html
@@ -265,13 +265,13 @@
 <div class="orv_system"><p>[This skill isn't affected by the first generation probability.]</p></div>
 <p class="orv_line">At first, I thought it would be better to get the license for Bookmark. Then I thought about it and Bookmark was a skill that borrowed other people's skills.</p>
 <p class="orv_line">In other words, if I got a license for Bookmark but no additional license for the other person's skill, Bookmark would be useless.</p>
-<p class="orv_line">It was an island with too many constraints but it couldn't be helped. The thing I needed to go on this island was more important than skills.</p>
+<p class="orv_line">It was an island with too many constraints but it couldn't be helped. The thing I needed to do on this island was more important than skills.</p>
 <p class="orv_line">I heard Lee Jihye's voice in the distance. "Great Great Master!"</p>
 <p class="orv_line">It was already the second day. Lee Jihye was chasing One Invincible Fist Yoo Hoseong around. "Great Great Master! Please tell me that story!"</p>
 <p class="orv_line">It was the same with Yoo Hoseong who gave a cow food. "Just one phrase! I can learn really well."</p>
 <p class="orv_line">Lee Jihye annoyed Yoo Hoseong even when doing his laundry or cutting firewood.</p>
 <p class="orv_line">"How did you do that yesterday? You stretched out your fist and his head exploded!"</p>
-<p class="orv_line">Of course, Yoo Hoseong didn't say anything. I thought it wouldn't be easy to learn Story Control. it took a long time for Kyrgios and the Breaking the Sky Sword Saint to learn this technique.</p>
+<p class="orv_line">Of course, Yoo Hoseong didn't say anything. I thought it wouldn't be easy to learn Story Control. It took a long time for Kyrgios and the Breaking the Sky Sword Saint to learn this technique.</p>
 <p class="orv_line">Story Control. It was the name of a pure technique, not a skill or stigma. There were many explanations for it in Ways of Survival but I didn't know it precisely because there were many voices. Thus, I was actually a bit worried.</p>
 <div class="orv_system"><p>[Giant Story 'Torch That Swallowed the Myth' is growling.]</p></div>
 <p class="orv_line">…I had to do something about this brat soon.</p>
@@ -283,7 +283,7 @@
 <p class="orv_line">"They were transcendents without any sponsors. They are different from you."</p>
 <p class="orv_line">It was a sober refusal.</p>
 <p class="orv_line">"You never know! I'll do exactly as you tell me!"</p>
-<p class="orv_line">"Your position is wrong from the beginning. This isn't something you can learn just be doing as I say. Have you felt nothing while following me for two days?"</p>
+<p class="orv_line">"Your position is wrong from the beginning. This isn't something you can learn just by doing as I say. Have you felt nothing while following me for two days?"</p>
 <p class="orv_line">Yoo Joonghyuk's great master (they even had the same surname) gave an unlucky smile. In fact, I knew. Yoo Hoseong was testing us the whole time.</p>
 <p class="orv_line">"Haven't you heard anything here?"</p>
 <p class="orv_line">Lee Jihye and I looked at the surrounding scenery at the same time. The man cleaning up the pig's poop stared at me, like he was asking what I was looking at.</p>
