--- a/website/stories/orv/read/ch_363.html
+++ b/website/stories/orv/read/ch_363.html
@@ -218,7 +218,7 @@
 <p class="orv_line">"I understand."</p>
 <div class="orv_system"><p>[Story, 'Demon King's Fanatical Believer', is singing a song.]</p></div>
 <div class="orv_quote"><p>「 Oh, oh~, Dokja hyung said it back then. I am the god of the world. Follow me, and you'll learn the truth of the world~. 」</p></div>
-<p class="orv_line">"…And when Gilyoung wakes up, please tell him this. Something really bad will happen if he continues to acquire twisted Stories." (Lee Gilyoung → Lee Gilyoung)</p>
+<p class="orv_line">"…And when Gilyoung wakes up, please tell him this. Something really bad will happen if he continues to acquire twisted Stories."</p>
 <p class="orv_line">Jung Heewon broke into a fit of giggles, and I reprimanded her with a slightly more serious tone of voice. "This isn't a joke, you know."</p>
 <p class="orv_line">"I'm not joking, either. Dokja-ssi, you really need to consciously recognise your position. I'm talking about recognising just what kind of a person you are to these kids."</p>
 <p class="orv_line">"…"</p>
