--- a/website/stories/orv/read/ch_364.html
+++ b/website/stories/orv/read/ch_364.html
@@ -356,7 +356,7 @@
 <p class="orv_line">He lightly jumped off from the treetop and arrived before the owner of the voice with a gob-smacking turn of speed.</p>
 <p class="orv_line">There they were, a man wearing a white coat and a platinum-blonde woman. Asmodeus smiled brightly.</p>
 <div class="orv_constellation"><p>['Demon King of Salvation', looks like we were fated to cross paths in this manner.]</p></div>
-<p class="orv_line">The Demon King of Salvation'. The object of his grudge was now standing right in front of his eyes. However, the man didn't seem to be flustered at all.</p>
+<p class="orv_line">'The Demon King of Salvation'. The object of his grudge was now standing right in front of his eyes. However, the man didn't seem to be flustered at all.</p>
 <p class="orv_line">"I didn't come here to fight, Asmodeus."</p>
 <div class="orv_constellation"><p>[That's not something for you to decide. Because…]</p></div>
 <p class="orv_line">"You need the syllable [Gru], right?"</p>
