--- a/website/stories/orv/read/ch_371.html
+++ b/website/stories/orv/read/ch_371.html
@@ -209,8 +209,7 @@
 <p class="orv_line">Out of all the futures she read, this was the 'only one that worked out fine'. Kim Dokja didn't die, and for the first time ever, those two idiots would get to share a proper conversation.</p>
 <p class="orv_line">That's what Han Sooyoung's [Predictive Plagiarism] had predicted, and that was why she didn't try to dodge Yoo Joonghyuk's sword at the last second. So, Kim Dokja should definitely be alive.</p>
 <p class="orv_line">It was around here that she heard the sound of a sword clashing against something else.</p>
-<p class="orv_line">'…Are they still fighting?</p>
-<p class="orv_line">These idiots, I even died so that you two could talk to each other, but this…'</p>
+<p class="orv_line">'…Are they still fighting? These idiots, I even died so that you two could talk to each other, but this…'</p>
 <p class="orv_line">She figured that she really needed to give these two men a harsh earful when she arrived there. But, when she pushed past the bushes and stepped forward, the ensuing spectacle freaked her out in a rather grand manner.</p>
 <p class="orv_line">Kwa-aaang!! Bang!!!</p>
 <p class="orv_line">Yoo Joonghyuk was mercilessly slamming his sword down on Kim Dokja, currently sprawled out on the ground.</p>
