--- a/website/stories/orv/read/ch_383.html
+++ b/website/stories/orv/read/ch_383.html
@@ -268,7 +268,7 @@
 <p class="orv_line">Tsu-chuchuchut!</p>
 <div class="orv_constellation"><p>[You bastard!]</p></div>
 <p class="orv_line">Pungbaek glared at me as if he'd start vomiting blood at any second.</p>
-<p class="orv_line">"Of course, I know that you and &lt;Hongik&gt; worked hard to aid the Peninsula during its infant stages. I do acknowledge the value of the Story you people possess. Unfortunately, that doesn't mean everyone from the Peninsula must swear loyalty to you," I finished my speech while watching Pungbaek's beard tremble from rage. "Everyone has their own way of clearing 'scenarios'. Even if you're the Peninsula's highest-grade Constellation, you can't interfere with the actions of &lt;Kim Dokja's Company&gt;."</p>
+<p class="orv_line">"Of course, I know that you and &lt;Hongik&gt; worked hard to aid the Peninsula during its infant stages. I do acknowledge the value of the Story you people possess. Unfortunately, that doesn't mean everyone from the Peninsula must swear loyalty to you." I finished my speech while watching Pungbaek's beard tremble from rage. "Everyone has their own way of clearing 'scenarios'. Even if you're the Peninsula's highest-grade Constellation, you can't interfere with the actions of &lt;Kim Dokja's Company&gt;."</p>
 <p class="orv_line">Cheok Jungyeong seemed to be enjoying my daring, fearless tone of voice. It'd probably be his first time seeing Pungbaek get treated in this manner.</p>
 <div class="orv_constellation"><p>[You dare, you dare…!]</p></div>
 <p class="orv_line">In place of the rendered-speechless Pungbaek, a Story's forceful aura rose up from behind him.</p>
