--- a/website/stories/orv/read/ch_389.html
+++ b/website/stories/orv/read/ch_389.html
@@ -220,9 +220,15 @@
 <hr>
 <br>
 <p class="orv_line">Persephone's dining table I hadn't seen in a while remained pretty much the same; slabs of well-cooked and delicious-looking steaks, as well as salad, laid out in several layers on top of a large plate. On the outside, they resembled foods commonly found everywhere, but I already knew very well that those were no ordinary meal.</p>
-<div class="orv_system"><p>[Bravery of an Empress of Swords who Conquered the World]</p></div>
-<div class="orv_constellation"><p>[Wisdom of a 3rd Circle Magician who Spent his Entire Life in a Library]</p></div>
-<div class="orv_constellation"><p>[Will of a Swordmaster who Couldn't use Either Sword Strengthening or Sword Manifestation]</p></div>
+<div class="orv_window">
+<h3 class="orv_window_title">[Bravery of an Empress of Swords who Conquered the World]</h3>
+</div>
+<div class="orv_window">
+<h3 class="orv_window_title">[Wisdom of a 3rd Circle Magician who Spent his Entire Life in a Library]</h3>
+</div>
+<div class="orv_window">
+<h3 class="orv_window_title">[Will of a Swordmaster who Couldn't use Either Sword Strengthening or Sword Manifestation]</h3>
+</div>
 <p class="orv_line">I wondered if I saw something wrong here and read the menu one more time.</p>
 <div class="orv_constellation"><p>[Hurry and have your fill. Do you not find the menu to your liking?]</p></div>
 <p class="orv_line">"…No, it's not that, but…"</p>
@@ -232,12 +238,16 @@
 <p class="orv_line">My hand moving towards the fork came to a stop at her words. "Have you spoken to my mother?"</p>
 <div class="orv_constellation"><p>[Fufu. We've talked to each other a few times.]</p></div>
 <p class="orv_line">If it was Persephone, then she was fully capable of doing that. The foie gras placed before me had this name, even:</p>
-<div class="orv_constellation"><p>[Heart of a Mother Sending her Child Away]</p></div>
+<div class="orv_window">
+<h3 class="orv_window_title">[Heart of a Mother Sending her Child Away]</h3>
+</div>
 <p class="orv_line">…This couldn't have been my mother's actual heart, now was it?</p>
 <p class="orv_line">I put the fork down and spoke. "I see that the type of foods has changed since the last time. There were Swordmasters and Archmages here in the past, if I recall correctly."</p>
 <div class="orv_constellation"><p>[The 'Isle of Reincarnators' have opened now, so we should enjoy special dishes for a change, wouldn't you agree? I may look this way, but I'm still a member of the Gourmet Association, so I shouldn't be eating the same food every day.]</p></div>
 <p class="orv_line">Her fork and knife moved; accompanied by rich gravy, aromatic paragraphs leaked out from thinly-sliced Stories. Persephone's graceful hand movements brought that food into her mouth. What she ate just now was</p>
-<div class="orv_constellation"><p>[Will of a Swordmaster who Couldn't use Either Sword Strengthening or Sword Manifestation.]</p></div>
+<div class="orv_window">
+<h3 class="orv_window_title">[Will of a Swordmaster who Couldn't use Either Sword Strengthening or Sword Manifestation.]</h3>
+</div>
 <div class="orv_constellation"><p>[And, some Stories will disappear if you don't make an effort to consume them.]</p></div>
 <p class="orv_line">Dying Stories were disintegrating at the end of the fork.</p>
 <p class="orv_line">Stories that no one searched for were pouring out entrancing sentences on the tip of Persephone's tongue right up until she consumed them.</p>
@@ -253,7 +263,7 @@
 <p class="orv_line">"May I ask what is it that you really wish to tell me about?"</p>
 <div class="orv_constellation"><p>[In truth, Hades does not want you to remain in this place.]</p></div>
 <p class="orv_line">"…Does that mean he doesn't want me to be his successor?"</p>
-<div class="orv_constellation"><p>[It's different from that. If I were to put it into words… ]</p></div>
+<div class="orv_constellation"><p>[It's different from that. If I were to put it into words…]</p></div>
 <p class="orv_line">Persephone spoke, as she began cutting the delicacy placed on the plate in the middle of the table.</p>
 <div class="orv_constellation"><p>[Hades, and I… We do not wish for you to stop as just the 'King of the Underworld'.]</p></div>
 <p class="orv_line">"That means…"</p>
@@ -274,9 +284,9 @@
 <div class="orv_system"><p>['Fruit of Good and Evil' is worsening your guilty conscience.]</p></div>
 <p class="orv_line">…Even if that confirmation turned out to be a useless waste of time.</p>
 <p class="orv_line">Persephone quietly studied me for a little while, lightly wiped her lips with a napkin, and extended her hand in my direction. Her eyes were gentle and friendly, with not a hint of animosity in them. Flustered, I tried to get up, but her Status had already reached my shoulder.</p>
-<div class="orv_system"><p>[A very long time ago, we have received a certain revelation from the 'three sisters of fate'.]</p></div>
+<div class="orv_constellation"><p>[A very long time ago, we have received a certain revelation from the 'three sisters of fate'.]</p></div>
 <p class="orv_line">"…A revelation?"</p>
-<div class="orv_system"><p>[It said, 'A successor to the darkest night who will end the most ancient Myth, will appear'.]</p></div>
+<div class="orv_constellation"><p>[It said, 'A successor to the darkest night who will end the most ancient Myth, will appear'.]</p></div>
 <p class="orv_line">Abruptly, I recalled the story Dionysus told me before.</p>
 <p class="orv_line">– Several Constellations, including myself, believe that you will be the one to reach the ■■.</p>
 <p class="orv_line">The 'several Constellations' back then must've been Persephone and Hades.</p>
