--- a/website/stories/orv/read/ch_341.html
+++ b/website/stories/orv/read/ch_341.html
@@ -251,7 +251,7 @@
 <div class="orv_system"><p>[The 'Unidentified Wall' says: …I'll help you.]</p></div>
 <p class="orv_line">At the same time, a small partition of space was created around me. It was a space reminiscent of a Mino Soft intern a long time ago. A large panel was created in front of me and there was a familiar type of input device.</p>
 <p class="orv_line">Perhaps Jang Hayoung had listened to the stories of countless constellations in this small wall. Jang Hayoung listened to stories that were written on this wall like graffiti and…</p>
-<div class="orv_system"><p>[The Unidentified Wall says: Do a good job'.]</p></div>
+<div class="orv_system"><p>[The 'Unidentified Wall' says: Do a good job.]</p></div>
 <p class="orv_line">…I had nothing to say. I looked down at the sleeping Jang Hayoung for a moment before turning my head.</p>
 <p class="orv_line">First of all, it was important to turn off the emergency light.</p>
 <div class="orv_system"><p>[The 'Unidentified Wall' has temporarily granted you a license.]</p></div>
