--- a/website/stories/orv/read/ch_345.html
+++ b/website/stories/orv/read/ch_345.html
@@ -201,7 +201,7 @@
 <p class="orv_line">"Not anymore. I asked Dionysus to cut off the connection during Gigantomachia."</p>
 <div class="orv_quote"><p>「 (Is Olympus that passive? How did you pay for the huge probability?) 」</p></div>
 <p class="orv_line">I shrugged. I couldn't afford to elaborate on the details of the deal I made with Dionysus. "Read it through the wall later. You will read about everything I do anyway. Before that, answer my question. Where is your sponsor now?"</p>
-<div class="orv_quote"><p>「 (I was absorbed by the wall and my ties with him broken. I don't know where he is now. Just…) 」</p></div>
+<div class="orv_quote"><p>「 (I was absorbed by the wall and my ties with him was broken. I don't know where he is now. Just…) 」</p></div>
 <p class="orv_line">Nirvana looked at me and continued,</p>
 <div class="orv_quote"><p>「 (I think you might've suspected it already?) 」</p></div>
 <p class="orv_line">In fact, it was true. My question to Nirvana was only to change my guess to conviction.</p>
