--- a/website/stories/orv/read/ch_348.html
+++ b/website/stories/orv/read/ch_348.html
@@ -222,7 +222,8 @@
 <div class="orv_system"><p>[Your Demon Realm ranking is adjusted!]</p></div>
 <div class="orv_system"><p>[You have become the 71st Demon King!]</p></div>
 <p class="orv_line">I looked at the last remaining one, Performer of Musical Instruments Amdusias.</p>
-<p class="orv_line">Amdusias asked, [Do you really have to do this?]</p>
+<p class="orv_line">Amdusias asked,</p>
+<div class="orv_constellation"><p>[Do you really have to do this?]</p></div>
 <div class="orv_constellation"><p>[Why, are you scared?]</p></div>
 <div class="orv_constellation"><p>[Do you see me in the same class as Andromalius and Dantalion?]</p></div>
 <p class="orv_line">The atmosphere changed. Unlike the two demon kings I had previously defeated, Amdusias was prepared for a fight. The horn of a unicorn grew from the head of the incarnation.</p>
