--- a/website/stories/orv/read/ch_353.html
+++ b/website/stories/orv/read/ch_353.html
@@ -195,7 +195,8 @@
 <p class="orv_line">Under the rubble, Yoo Joonghyuk's hands were sticking out. Han Sooyoung stared down at Yoo Joonghyuk. "This jerk, always appearing and trampling on people… do you feel good doing so?"</p>
 <div class="orv_system"><p>[Incarnation 'Han Sooyoung' has an 8.9% share in the giant story 'Torch That Swallowed the Myth'.]</p></div>
 <p class="orv_line">As expected, Han Sooyoung would have the correct amount of shares.</p>
-<div class="orv_constellation"><p>[Narrators participating in the good or evil judgment can't 'gift shares. It meant that those who hadn't yet participated would be able to exchange their shares.]</p></div>
+<div class="orv_system"><p>[Narrators participating in the good or evil judgment can't gift shares.]</p></div>
+<p class="orv_line">It meant that those who hadn't yet participated would be able to exchange their shares.]</p>
 <p class="orv_line">Han Sooyoung watched me and grumbled through Midday Tryst.</p>
 <p class="orv_line">–I lost 0.1% of this story to Lee Seolhwa.</p>
 <p class="orv_line">Perhaps Han Sooyoung had adjusted her shares ownership to Lee Seolhwa as soon as she learnt the information here. Then she came straight to this place. Han Sooyoung turned towards the surrounding constellations and declared with a growl, "I am evil. In addition, that fucking Kim Dokja standing over there is definitely evil."</p>
@@ -331,7 +332,7 @@
 <p class="orv_line">Great Dokkaebi Baram's eyes widened as he looked at the air.</p>
 <div class="orv_constellation"><p>[…Interesting. A revelation at this timing?]</p></div>
 <p class="orv_line">Several constellations noticeably flinched at the word 'revelation'. Baram laughed.</p>
-<div class="orv_constellation"><p>[…Good. Even if everyone doesn't speak, the stage has already been decided―]</p></div>
+<div class="orv_constellation"><p>[…Good. Even if everyone doesn't speak, the stage has already been decided.]</p></div>
 <p class="orv_line">I listened to the words of the great dokkaebi and was in a daze. What the hell just happened? Then pain suddenly shot through my head.</p>
 <div class="orv_system"><p>[The probability of the Star Stream is doubting you!]</p></div>
 <p class="orv_line">I perceived a terrible gaze staring at me. It was gazing at me as if it found something suspicious. The gaze lasted for a moment before disappearing.</p>
