--- a/website/stories/orv/read/ch_354.html
+++ b/website/stories/orv/read/ch_354.html
@@ -272,8 +272,9 @@
 <p class="orv_line">I didn't understand at first. The information sent out of the Fourth Wall became a 'revelation' to the constellations? In the first place, the role of the 'revelation' in the original novel… no, wait.</p>
 <p class="orv_line">'Don't tell me?'</p>
 <p class="orv_line">There were many things in my head.</p>
-<p class="orv_line">Yoo Sangah asked, 「 (Dokja-ssi, have you noticed the Fourth Wall might be the original words?) 」</p>
-<p class="orv_line">"Yes. I don't know the exact sense but…'</p>
+<p class="orv_line">Yoo Sangah asked,</p>
+<div class="orv_quote"><p>「 (Dokja-ssi, have you noticed the Fourth Wall might be the original words?) 」</p></div>
+<p class="orv_line">"Yes. I don't know the exact sense but…"</p>
 <div class="orv_quote"><p>「 (Originally, the Fourth Wall is a stage term. A wall separating the play from the audience. The characters in the play would never be able to recognize the Fourth Wall. It is because they don't exist outside the stage.) 」</p></div>
 <p class="orv_line">Outside the stage. It was the 'reality' I lived in.</p>
 <p class="orv_line">Goosebumps formed on my arms. Indeed, if the name 'Fourth Wall' had its origins in the same meaning as Yoo Sangah's description, it was natural there would be a Ways of Survival inside this wall. It was because the contents of Ways of Survival were created in reality.</p>
@@ -326,7 +327,7 @@
 <p class="orv_line">–…I want to be real companions.</p>
 <p class="orv_line">Han Sooyoung was silent for a long time before quietly turning around and disappearing into the Factory. In the distance, a message from her came back like an echo.</p>
 <p class="orv_line">–Didn't I say it clearly? I oppose it.</p>
-<p class="orv_line">Not long after, we arrived at the Factory and each of us took a rest to recover. That evenng, I summoned all the members of Kim Dokja's Company apart from the unconscious Yoo Joonghyuk.</p>
+<p class="orv_line">Not long after, we arrived at the Factory and each of us took a rest to recover. That evening, I summoned all the members of Kim Dokja's Company apart from the unconscious Yoo Joonghyuk.</p>
 <p class="orv_line">I had Biyoo block the channel and placed a thick barrier to prevent other constellations from listening.</p>
 <p class="orv_line">After some preparations, I looked back at the party members. "I have something to say to you."</p>
 <p class="orv_line">I opened my mouth but couldn't speak easily. Perhaps she thought I was playing a joke but Lee Jihye trembled. "Ahjussi, what is wrong with you all of a sudden? You are scary."</p>
