--- a/website/stories/orv/read/ch_358.html
+++ b/website/stories/orv/read/ch_358.html
@@ -265,7 +265,7 @@
 <p class="orv_line">The problem was that I now entered the 'old story'. A world without the power of the Attributes Window and no convenient functions.</p>
 <p class="orv_line">The danger here wasn't only the monsters. Since I couldn't receive the effects of the skills, my immune system would decrease and I had to be wary of the cold and diseases. In the original novel, some constellations died after being affected by infectious diseases.</p>
 <p class="orv_line">In fact, the following sentence had appeared in Ways of Survival:</p>
-<div class="orv_quote"><p>「 The constellations, who were accustomed to the Attributes Window and the convenience of the system, died powerlessly. They were able to raise a proper resistance to the world that couldn't be read with their sensibilities. 」</p></div>
+<div class="orv_quote"><p>「 The constellations, who were accustomed to the Attributes Window and the convenience of the system, died powerlessly. They weren't able to raise a proper resistance to the world that couldn't be read with their sensibilities. 」</p></div>
 <p class="orv_line">The constellations, who reigned in the Star Stream, died because they couldn't overcome diseases or orcs. Some constellations couldn't endure the disgrace and took their own lives.</p>
 <p class="orv_line">It was funny.</p>
 <div class="orv_system"><p>[The participants of Island 861 are wiped out.]</p></div>
