--- a/website/stories/orv/read/ch_360.html
+++ b/website/stories/orv/read/ch_360.html
@@ -199,7 +199,7 @@
 <br>
 <hr>
 <br>
-<p class="orv_line">I was indebted to Cheok Jungyeong from Dark Castle to the Demon King Selection. I swallowed down my pleasure. Cheok Jungyeong was a good constellation but his purpose here was unclear. It was time to look at the other person's purpose. It would be difficult if his purpose conflicted with me.</p>
+<p class="orv_line">I was indebted to Cheok Jungyeong from Dark Castle to the Demon King Selection. I swallowed down my pleasure. Cheok Jungyeong was a good constellation but his purpose here was unclear. It was time to look at the other person's purpose. It would be difficult if his purpose conflicted with mine.</p>
 <p class="orv_line">"I was worried because you haven't been sending any indirect messages."</p>
 <p class="orv_line">"I have been refraining from broadcasting on the stream for a while."</p>
 <p class="orv_line">On closer examination, Cheok Jungyeong's entire body seemed much more refined than before. Something flashed in my mind. "Did you come to the island before the start of the scenario?"</p>
@@ -222,13 +222,12 @@
 <p class="orv_line">An old scent was felt from the bodies of the forgotten who were opening the path. A very strong, curved and hardened story.</p>
 <p class="orv_line">Lee Jihye whispered, "How are they so strong?"</p>
 <p class="orv_line">It was natural to be curious. The forgotten people themselves didn't feel particularly great. Yet they used a single strike to kill the troll we struggled with.</p>
-<p class="orv_line">"The quantity and quality of their stories seem better than us…"</p>
+<p class="orv_line">"The quantity and quality of their stories seem better than ours…"</p>
 <p class="orv_line">"No matter how good the stories, it is useless if they can't take advantage of it properly."</p>
 <p class="orv_line">Lee Jihye stared at me with questioning eyes. The moment I tried to speak, I was interrupted by Cheok Jungyeong.</p>
 <p class="orv_line">"He's right. Even if there are 10 swords, humans could only hold two swords properly."</p>
 <p class="orv_line">Goryeo's First Sword. His body was a sword, his heart was a sword, his story was a sword.</p>
-<p class="orv_line">Lee Jihye looked down at her hands like she gained profound enlightenment. In the meantime,</p>
-<p class="orv_line">Cheok Jungyeong stared at me with a deep gaze. "You have collected many great stories. You won't fall behind the top rated constellations right now."</p>
+<p class="orv_line">Lee Jihye looked down at her hands like she gained profound enlightenment. In the meantime, Cheok Jungyeong stared at me with a deep gaze. "You have collected many great stories. You won't fall behind the top rated constellations right now."</p>
 <p class="orv_line">"You're overpraising me."</p>
 <p class="orv_line">"By the way… you've accumulated too much in a short period of time. Do you know what state you are in right now?"</p>
 <p class="orv_line">I closed my mouth. In these eyes, I was currently in a very precarious state.</p>
@@ -316,7 +315,7 @@
 <div class="orv_system"><p>[Giant Story 'Torch That Swallowed the Myth' declares that it will destroy your incarnation body if you keep approaching him!]</p></div>
 <p class="orv_line">I ignored its words and continued forward. The swirling giant story was emitting threatening air currents. I was annoyed by the childish story who thought it was a provocation against him.</p>
 <p class="orv_line">"What? Do you want to be like that guy?"</p>
-<p class="orv_line">"One Invincible Fist, Yoo Hoseong. "You taught the Breaking the Sky Sword Saint and Kyrgios."</p>
+<p class="orv_line">"One Invincible Fist, Yoo Hoseong. You taught the Breaking the Sky Sword Saint and Kyrgios."</p>
 <p class="orv_line">The expression of the child changed. The inhabitants of this place were all 'reincarnators'. Their age couldn't be read from their appearance. The child in front of me was a reincarnator who had lived for at least 10,000 years. The child narrowed his eyes and asked me. "Who are you? What is your relationship with those children?"</p>
 <div class="orv_system"><p>[Giant Story 'Torch That Swallowed the Myth' is revealing its teeth to the presence in front of you.]</p></div>
 <p class="orv_line">There was another reason I came to Reincarnation Island. Based on the future battles with myth-grade constellations, I had to obtain something from this place.</p>
