--- a/website/stories/orv/read/ch_362.html
+++ b/website/stories/orv/read/ch_362.html
@@ -241,7 +241,7 @@
 <p class="orv_line">Perhaps her librarian's work had been busy lately because Yoo Sangah sounded tired.</p>
 <p class="orv_line">'Is it related to reading the novel?'</p>
 <div class="orv_quote"><p>「 (I can't think of anything else but that.) 」</p></div>
-<p class="orv_line">'This has never happened in the meantime…;</p>
+<p class="orv_line">'This has never happened in the meantime…'</p>
 <p class="orv_line">Come to think of it, that wasn't true. There were some characters who had good feelings towards me as soon as they saw me.</p>
 <div class="orv_quote"><p>「 (Maybe it is because the wall is thinner?) 」</p></div>
 <p class="orv_line">I heard Yoo Sangah's words and thought it was possible. I didn't know the exact reason but it was possible the failure of the Fourth Wall had closed the distance between the world and me. Then how far did this power apply?</p>
@@ -347,7 +347,8 @@
 <p class="orv_line">'Come with me'.</p>
 <div class="orv_quote"><p>「 …To where? 」</p></div>
 <p class="orv_line">I slowly opened my mouth and spoke. I wanted all my stories to reach ■■.</p>
-<p class="orv_line">The story asked, 「 What is at the end of the whole story? 」</p>
+<p class="orv_line">The story asked,</p>
+<div class="orv_quote"><p>「 What is at the end of the whole story? 」</p></div>
 <p class="orv_line">'I don't know. Still, at least we won't be alone'.</p>
 <div class="orv_system"><p>[The story 'Hell of Eternity' is looking at you.]</p></div>
 <p class="orv_line">After a while, I felt the stories wrapping around my fingertips. My body floating in the waves of the story gradually became heavy and I slowly opened my eyes.</p>
