--- a/website/stories/orv/read/ch_367.html
+++ b/website/stories/orv/read/ch_367.html
@@ -199,8 +199,7 @@
 <p class="orv_line">The Metatron of his memories would always return the exact same smile. For several hundreds of years, or maybe even for thousands of years.</p>
 <p class="orv_line">Metatron continued to carry that grin from the far side of time that Michael couldn't even remember anymore.</p>
 <p class="orv_line">– Please, focus on hating the 'Evil' in front of your eyes, instead. That is your 'scenario'.</p>
-<p class="orv_line">'…My scenario.</p>
-<p class="orv_line">Just how long have I been hunting down the demons?'</p>
+<p class="orv_line">'…My scenario. Just how long have I been hunting down the demons?'</p>
 <p class="orv_line">Michael, for a long time now, could no longer remember his birth.</p>
 <div class="orv_system"><p>[The power of 'Fruit of Good and Evil' is going berserk.]</p></div>
 <p class="orv_line">His memories were always incorrect, incomplete. All he could remember were the final words of the Demon Kings dying at his hands.</p>
