--- a/website/stories/orv/read/ch_388.html
+++ b/website/stories/orv/read/ch_388.html
@@ -243,7 +243,7 @@
 <hr>
 <br>
 <p class="orv_line">While moving through the palace's interior, I couldn't help but feel a bit strange inside.</p>
-<p class="orv_line">I figured that something like this might happen after becoming the 'successor to the &lt;Underworld&gt;', but still, experiencing a near-vertical rise of my station made the inside of my brain go all soft and mushy.</p>
+<p class="orv_line">I figured that something like this might happen after becoming the 'successor to the &lt;Underworld&gt;', but still, experiencing a near-vertical rise of my status made the inside of my brain go all soft and mushy.</p>
 <p class="orv_line">I had never been treated this warmly before in my life. On top of that, what was up with this rather gloomy and decorative costume?</p>
 <div class="orv_system"><p>[Character, 'Ricardo von Kaizenix', asks you if you were also a prince.]</p></div>
 <p class="orv_line">The Fourth Prince of the Kaizenix Archipelago, sharing the same vision as me, decided to say something. As I deliberated on what my reply should be, the Judge attentively studying me also decided to address me.</p>
