--- a/website/stories/side/read/template.html
+++ b/website/stories/side/read/template.html
@@ -95,17 +95,16 @@
             <div class="setting_item">Font Size
                 <input type="number" min="30" max="100" value="52" id="set-font-size">
             </div>
+            <div class="setting_item">Line Height
+                <input type="number" min="1" max="100" value="49 oninput="" id="set-line-height">
+			</div>
             <div class="setting_item">Font Weight
                 <select name="set-font-weight" id="set-font-weight">
                     <option value="normal" style="font-weight: unset;" selected>Normal</option>
                     <option value="lighter" style="font-weight: lighter;">Lighter</option>
                     <option value="bold" style="font-weight: bold;">Bold</option>
                     <option value="bolder" style="font-weight: bolder;">Bolder</option>
-
                 </select>
-            </div>
-            <div class="setting_item">Line Height
-                <input type="number" min="1" max="100" value="32" oninput="" id="set-line-height">
             </div>
             <hr>
                 <div class="setting_item">Rich Text Features <input type="checkbox" name="set-rich-text-toggle"
