--- a/website/stories/cont/read/template.html
+++ b/website/stories/cont/read/template.html
@@ -92,6 +92,9 @@
                     <option value="Impact" style="font-family: Impact;">Impact</option>
 
                 </select></div>
+            <div class="setting_item">Font Size
+                <input type="number" min="30" max="100" value="52" id="set-font-size">
+            </div>
             <div class="setting_item">Line Height
                 <input type="number" min="1" max="100" value="49 oninput="" id="set-line-height">
 			</div>
@@ -102,9 +105,6 @@
                     <option value="bold" style="font-weight: bold;">Bold</option>
                     <option value="bolder" style="font-weight: bolder;">Bolder</option>
                 </select>
-            </div>
-            <div class="setting_item">Line Height
-                <input type="number" min="1" max="100" value="32" oninput="" id="set-line-height">
             </div>
             <hr>
                 <div class="setting_item">Rich Text Features <input type="checkbox" name="set-rich-text-toggle"
