--- a/website/stories/orv/read/template.html
+++ b/website/stories/orv/read/template.html
@@ -96,7 +96,7 @@
                 <input type="number" min="30" max="100" value="52" id="set-font-size">
             </div>
             <div class="setting_item">Line Height
-                <input type="number" min="1" max="100" value="49 oninput="" id="set-line-height">
+                <input type="number" min="1" max="100" value="49" oninput="" id="set-line-height">
 			</div>
             <div class="setting_item">Font Weight
                 <select name="set-font-weight" id="set-font-weight">
