--- a/website/stories/index.html
+++ b/website/stories/index.html
@@ -21,7 +21,7 @@
         <div class="cards">
             <a href="./orv/" class="card"><img src="../assets/covers/orv.webp" alt="Omniscient Reader's Viewpoint cover image showing the main characters"><p>ORV</p></a>
             <a href="./cont/" class="card"><img src="../assets/covers/cont.webp" alt="ORV Sequel cover image"><p>ORV Sequel (CH 553+)</p></a>
-            <a href="./side/" class="card"><img src="../assets/covers/side.webp" alt="ORV One Shot Side Stories cover image"><p>One Short Stories</p></a>
+            <a href="./side/" class="card"><img src="../assets/covers/side.webp" alt="ORV One Shot Side Stories cover image"><p>One Shot Stories</p></a>
         </div>
     </div>
 </body>
